[package]
name = "qmu"
authors = [ "Quigly" ]
description = "Quigly's Math Utility"
license = "MIT"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/quigly/qmu"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
